simplify test cases