@@ -10,6 +10,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Consumer;
 
 import org.junit.jupiter.api.Test;
 
@@ -28,7 +29,7 @@ public class TestNullPtr {
   }
 
   @SuppressWarnings("unchecked")
-  public GeneratedBase<String> genTestClass(String runMethodSrc) throws Exception {
+  public static GeneratedBase genTestClass(String runMethodSrc) throws Exception {
     ClassPool cp = ClassPool.getDefault();
     CtClass cc = cp.makeClass("ee.murkaje.TestNullPtr$Gen" + counter.getAndIncrement());
 
@@ -41,48 +42,49 @@ public class TestNullPtr {
     Files.createDirectories(classDebugPath.getParent());
     Files.write(classDebugPath, cc.toBytecode());
 
-    return (GeneratedBase<String>) cc.toClass().newInstance();
+    return (GeneratedBase) cc.toClass().getDeclaredConstructor().newInstance();
+  }
+
+  public static void assertNpeMessage(Runnable testCase, String expectedMessage) {
+    assertNpeMessage(testCase, exceptionMessage -> assertEquals(expectedMessage, exceptionMessage));
+  }
+
+  public static void assertNpeMessage(Runnable testCase, Consumer<String> messageVerifier) {
+    NullPointerException npe = assertThrows(NullPointerException.class, testCase::run);
+    npe.printStackTrace(System.out);
+    messageVerifier.accept(npe.getMessage());
   }
 
   @Test
   public void testLocalVariable() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "String myString = null;" +
         "myString.toLowerCase();");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Invoking java.lang.String#toLowerCase on null local variable in slot 2", npe.getMessage());
+    assertNpeMessage(testClass::run, "Invoking java.lang.String#toLowerCase on null local variable in slot 2");
   }
 
   @Test
   public void testLocalVariableWithDebug() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("");
+    GeneratedBase testClass = genTestClass("");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.generateNpeDebug(""));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Invoking java.lang.String#toLowerCase on null local variable myVar:java.lang.String", npe.getMessage());
+    assertNpeMessage(testClass::generateNpeDebug, "Invoking java.lang.String#toLowerCase on null local variable myVar:java.lang.String");
   }
 
   @Test
   public void testMethodParam() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "((String)$1).toLowerCase();");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Invoking java.lang.String#toLowerCase on null method parameter at index 1", npe.getMessage());
+    assertNpeMessage(testClass::run, "Invoking java.lang.String#toLowerCase on null method parameter at index 1");
   }
 
   @Test
   public void testChainedMethod() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "getNullString().toLowerCase();");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
+    NullPointerException npe = assertThrows(NullPointerException.class, testClass::run);
     npe.printStackTrace(System.out);
 
     //Generated class has changing index, split before and after it
@@ -92,118 +94,98 @@ public class TestNullPtr {
 
   @Test
   public void testChainedMethodWithDebug() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("");
+    GeneratedBase testClass = genTestClass("");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, testClass::generateNpeDebugMethodChaining);
-    npe.printStackTrace(System.out);
+    assertNpeMessage(testClass::generateNpeDebugMethodChaining,
+        "Invoking java.lang.String#compareTo on null object returned from ee.murkaje.GeneratedBase#getNullString");
+  }
 
-    assertEquals("Invoking java.lang.String#compareTo on null object returned from ee.murkaje.GeneratedBase#getNullString", npe.getMessage());
+  @Test
+  public void testTernaryBranchMethodChaining() throws Exception {
+    GeneratedBase testClass = genTestClass("" +
+        "boolean test = true;" +
+        "(test ? GeneratedBase.super.getNullString() : GeneratedBase.super.getEmptyString()).toLowerCase();");
+
+    assertNpeMessage(testClass::run, "Invoking java.lang.String#toLowerCase on null object returned from ee.murkaje.GeneratedBase#getNullString");
   }
 
   @Test
   public void testExplicitNullCheck() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "String nullString = null;" +
         "if(nullString == null) {" +
         "  throw new NullPointerException();" +
         "}");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Explicitly thrown after null check of local variable in slot 2", npe.getMessage());
+    assertNpeMessage(testClass::run, "Explicitly thrown after null check of local variable in slot 2");
   }
 
   @Test
   public void testArrayStore() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "String[] myStrings = getNullStringArray();" +
         "String str = getEmptyString();" +
         "myStrings[0] = str;");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Storing array value to null local variable in slot 2", npe.getMessage());
+    assertNpeMessage(testClass::run, "Storing array value to null local variable in slot 2");
   }
 
   @Test
   public void testArrayLength() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "String[] myStrings = getNullStringArray();" +
         "myStrings.length;");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Getting array length of null local variable in slot 2", npe.getMessage());
+    assertNpeMessage(testClass::run, "Getting array length of null local variable in slot 2");
   }
 
   @Test
   public void testNullInstanceFieldGet() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "TestClass test = null;" +
         "test.stringField;");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Getting field ee.murkaje.TestClass.stringField of null local variable in slot 2", npe.getMessage());
+    assertNpeMessage(testClass::run, "Getting field ee.murkaje.TestClass.stringField of null local variable in slot 2");
   }
 
   @Test
   public void testInstanceFieldPut() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "TestClass test = null;" +
         "test.stringField = \"\";");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Setting field ee.murkaje.TestClass.stringField of null local variable in slot 2", npe.getMessage());
+    assertNpeMessage(testClass::run, "Setting field ee.murkaje.TestClass.stringField of null local variable in slot 2");
   }
 
   @Test
   public void testInstanceNullFieldGet() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "TestClass test = new TestClass();" +
         "test.stringField.toLowerCase();");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Invoking java.lang.String#toLowerCase on null instance field ee.murkaje.TestClass.stringField", npe.getMessage());
+    assertNpeMessage(testClass::run, "Invoking java.lang.String#toLowerCase on null instance field ee.murkaje.TestClass.stringField");
   }
 
   @Test
   public void testStaticFieldGet() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "TestClass.staticStringField.toLowerCase();");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Invoking java.lang.String#toLowerCase on null static field ee.murkaje.TestClass.staticStringField", npe.getMessage());
+    assertNpeMessage(testClass::run, "Invoking java.lang.String#toLowerCase on null static field ee.murkaje.TestClass.staticStringField");
   }
 
   @Test
   public void testNullExceptionThrow() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("");
-    NullPointerException npe = assertThrows(NullPointerException.class, testClass::throwNull);
-    npe.printStackTrace(System.out);
-
-    assertEquals("Throwing null exception object", npe.getMessage());
+    GeneratedBase testClass = genTestClass("");
+    assertNpeMessage(testClass::throwNull, "Throwing null exception object");
   }
 
   @Test
   public void testMethodReference() throws Exception {
-    GeneratedBase<String> testClass = genTestClass("" +
+    GeneratedBase testClass = genTestClass("" +
         "TestClass testClass = null;" +
         "TestClass.invokeEmptyMethod(testClass);");
 
-    NullPointerException npe = assertThrows(NullPointerException.class, () -> testClass.consume(null));
-    npe.printStackTrace(System.out);
-
-    assertEquals("Getting method reference ee.murkaje.TestClass::emptyMethod on null method parameter test", npe.getMessage());
+    assertNpeMessage(testClass::run, "Getting method reference ee.murkaje.TestClass::emptyMethod on null method parameter test");
   }
 }
